event system + bugfix

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -6,6 +6,16 @@
     "Fr":"Пт",
     "Sa":"Сб",
     "Su":"Вс",
+    "Day off":"Выходной",
+    "Round the clock":"Круглосуточно",
+
+    "1d":"день",
+    "2d":"дня",
+    "md":"дней",
+    "1h":"час",
+    "2h":"часа",
+    "mh":"часов",
+    "m":"минут",
 
     "Favorite":"Любимое",
     "User panel":"Панель пользователя",
@@ -55,7 +65,9 @@
 
     "Other":"Другое",
     "Contact us":"Связаться с нами",
-
+    "Events":"События",
+    "All events":"Все события",
+    "Show all events":"Просмотреть все события",
     "group":"групповая",
     "individual":"индивидуальная",
     "per person":"за человека",
