--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -6,6 +6,16 @@
     "Fr":"Пт",
     "Sa":"Сб",
     "Su":"Нд",
+    "Day off":"Вихідний",
+    "Round the clock":"Цілодобово",
+
+    "1d":"день",
+    "2d":"дня",
+    "md":"днів",
+    "1h":"година",
+    "2h":"години",
+    "mh":"годин",
+    "m":"хвилин",
 
     "Favorite":"Улюблене",
     "User panel":"Панель користувача",
@@ -75,6 +85,7 @@
     "Events":"Події",
     "Events catalog":"Каталог подій",
     "All events":"Усі події",
+    "Show all events":"Переглянути усі події",
     "Festivals":"Фестивалі",
     "Exhibitions":"Виставки",
     "Concerts":"Концерти",
