manage main page

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -87,5 +87,7 @@
     "Done!":"Выполнено!",
     "Reviews":"Отзывы",
     "New ones first":"Сначала новые",
-    "At first old":"Сначала старые"
+    "At first old":"Сначала старые",
+    "Publications":"Публикации",
+    "Show more publications":"Больше публикаций"
 }
